--- a/LOLDataAgent/requirements.txt
+++ b/LOLDataAgent/requirements.txt
@@ -1,7 +1,7 @@
-langchain
-langchain-community
-langchain-openai
-pymysql
-python-dotenv
-pyyaml
-sqlalchemy
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-openai>=0.0.5
+pymysql>=1.1.0
+python-dotenv>=1.0.0
+pyyaml>=6.0
+sqlalchemy>=2.0.0
