完成基础的Agent设计，更新了接口的说明

--- a/LOLDataAgent/config/.env.example
+++ b/LOLDataAgent/config/.env.example
@@ -16,3 +16,7 @@ DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=lol_data
+
+# Serper (Google search) - 用于实现 web 搜索工具
+SERPER_API_KEY=your_serper_api_key_here
+SERPER_BASE_URL=https://google.serper.dev
