--- a/LOLDataAgent/requirements.txt
+++ b/LOLDataAgent/requirements.txt
@@ -1,7 +1,14 @@
-langchain>=0.1.0
-langchain-community>=0.0.10
-langchain-openai>=0.0.5
+# ...existing code...
+langchain>=0.3,<0.4
+langchain-community>=0.3,<0.4
+langchain-openai>=0.2,<0.3
+langchain-core>=0.3,<0.4
 pymysql>=1.1.0
 python-dotenv>=1.0.0
 pyyaml>=6.0
 sqlalchemy>=2.0.0
+sse-starlette>=0.8.0
+httpx>=0.23.0
+pytest>=7.0.0
+uvicorn[standard]>=0.20.0
+fastapi>=0.95.0
