feat : auth ok ; chat tbd

--- a/LoLSmartStatsWeb/backend/src/main/resources/application.properties
+++ b/LoLSmartStatsWeb/backend/src/main/resources/application.properties
@@ -1,2 +1,23 @@
 server.port=8080
 spring.application.name=backend
+
+# --- App / JWT ---
+# ???HS256 secret ?? 32 ?????????????????????
+app.jwt.secret=PLEASE_CHANGE_ME_TO_A_LONG_RANDOM_SECRET_32CHARS_MIN
+app.jwt.issuer=lol-smart-stats
+app.jwt.access-ttl-seconds=1800
+app.jwt.refresh-ttl-seconds=2592000
+
+# --- MySQL ---
+spring.datasource.url=jdbc:mysql://localhost:3306/lol_smart_stats?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# --- AI Agent (Python) ---
+app.ai.base-url=http://localhost:8000/api/v1/ai
+app.ai.api-key=PLEASE_CHANGE_ME
