--- a/LOLDataAgent/requirements.txt
+++ b/LOLDataAgent/requirements.txt
@@ -10,5 +10,6 @@ sqlalchemy>=2.0.0
 sse-starlette>=0.8.0
 httpx>=0.23.0
 pytest>=7.0.0
+pytest-asyncio>=0.23.0
 uvicorn[standard]>=0.20.0
 fastapi>=0.95.0
