--- a/LoLSmartStatsWeb/backend/src/main/resources/application.properties
+++ b/LoLSmartStatsWeb/backend/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.application.name=backend
 # ???HS256 secret ?? 32 ?????????????????????
 app.jwt.secret=PLEASE_CHANGE_ME_TO_A_LONG_RANDOM_SECRET_32CHARS_MIN
 app.jwt.issuer=lol-smart-stats
-app.jwt.access-ttl-seconds=1800
+#access token???? ???????2?
+app.jwt.access-ttl-seconds=172800
 app.jwt.refresh-ttl-seconds=2592000
 
 # --- MySQL ---
