--- a/LoLSmartStatsWeb/backend/src/main/resources/application.properties
+++ b/LoLSmartStatsWeb/backend/src/main/resources/application.properties
@@ -10,9 +10,9 @@ app.jwt.access-ttl-seconds=172800
 app.jwt.refresh-ttl-seconds=2592000
 
 # --- MySQL ---
-spring.datasource.url=jdbc:mysql://localhost:3306/lol_smart_stats?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/lol_data?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
